--- a/HISTORY
+++ b/HISTORY
@@ -1,6 +1,7 @@
 (this is pyut's HISTORY file. see http://pyut.sf.net for more informations)
 This file contain the project history.
 
+V1.5  2019 - Python 3 update;  Fork to comply with PEP-8, packaging typing, and latest wxPython API
 V1.2 - November 2002 - Release with miniOGL and tools plugins
 V1.1 - July 2002 - Release with use-case and plugins
 V1.0 - February 2002 - First release
