--- a/FAQ
+++ b/FAQ
@@ -1,40 +1,37 @@
-(this is pyut's FAQ file. see http://pyut.sf.net for more informations)
+(This is pyut's FAQ file. see https://github.com/hasii2011/PyUt/ for more information)
 This file contain the project FAQ's.
-(File maintener : C.Dutoit <dutoitc@hotmail.com>)
+(File maintainer: Humberto A. Sanchez. II <Humberto.A.Sanchez.II@gmail.com>)
 
-
-Resumes :
-=======
-1. Reverse engineering Python
-    1.1 : Reverse engineering Python do launch my program. Why ?
-2. rpm errors
-    2.1 : no permission to execute pyut on linux
 
 
 
 1. Reverse engineering Python
 =============================
-1.1 : Reverse engineering Python do launch my program. Why ?
-Q : When i do Python Reverse engineering on my program, my program
+Reverse engineering Python launches my program. Why ?
+Q: When I do Python Reverse engineering on my program, my program
     is launched. Why ?
-R : Python Reverse do an 'import' on python files. 
+A: Python Reverse does an 'import' on python files.
     An Import launch all the code that is found in the imported module.
     To fix it, you must add this kind of code in your program :
     if __name__=="__main__":
         do_some_stuff
-    This is general stuff, it's a good idea to put this in all your code.
+    This is general stuff, it is a good idea to put this in all your code.
     (Answered by C.Dutoit <dutoitc@hotmail.com>)
 
 
+2. How to run Pyut
+=============================
+Q: How do I get Pyut binaries
 
-2. RPM errors
-=============
-2.1 : RPM : no rights !
-Q : I have no permission to execute pyut on linux, or it won't works,
-	  with the RPM install
-R : This is a known bugs. You need to do the following tricks :
-    - su
-	- (password)
-	- chmod 755 /usr/local/bin/pyut
-	- chmod 777 /usr/local/share/pyut/PyutPrefs.dat
-    (Answered by C.Dutoit <dutoitc@hotmail.com>)
+A.  Unfortunately, at this time I can am unable to generate binaries for Mac OS X.  I am having code-signing problems.
+Also, I have not yet started work on generating Window exe files
+If you want to run it outside of Pycharm, you can run it in what py2app calls 'alias' mode.  The following are the steps
+
+
+    1.  Get Source:
+            git clone https://github.com/hasii2011/PyUt.git
+    2.  from the root directory (Assumes python3 on path)
+            ./packageme.sh
+    3.  start Pyut
+            ./dist/Pyut.app/Contents/MacOS/Pyut
+    (Answered by Humberto A. Sanchez. II <Humberto.A.Sanchez.II@gmail.com>)
