--- a/HISTORY
+++ b/HISTORY
@@ -1,6 +1,9 @@
-(this is pyut's HISTORY file. see http://pyut.sf.net for more informations)
+(this is pyut's HISTORY file. see https://github.com/hasii2011/PyUt/ for more informations)
 This file contain the project history.
 
+V1.9 2020  Coming 25 January !!
+V1.7  2019 Christmas Release - Lots plugins made to work again; Internal maintainability changes
+V1.6  2019 - See https://github.com/hasii2011/PyUt/releases
 V1.5  2019 - Python 3 update;  Fork to comply with PEP-8, packaging typing, and latest wxPython API
 V1.2 - November 2002 - Release with miniOGL and tools plugins
 V1.1 - July 2002 - Release with use-case and plugins
