Updated for wxPython 4.1.0;  Apparently, creating a Font no longer requires a wx.App instance active;  Also, creating one in a unit test is now problematic Clean up some old comments
Init PyutPreferences for TestAnchorPoint

--- a/FAQ
+++ b/FAQ
@@ -27,3 +27,10 @@ A.  Unfortunately, at this time I can only generate binaries for Mac OS X.
     Also, I have not yet started work on generating Window exe files
 
     The mac binary is here:  https://github.com/hasii2011/PyUt/releases/tag/4.0
+
+3. Pyut Development
+=============================
+Q: Why do some unit tests fail with: "wx._core.PyNoAppError: The wx.App object must be created first!"
+
+A. Make sure that the Debug preference debug_basic_shape is set to False
+        debug_basic_shape = False
