<Enhancement>[Refactor]: Dead Code - Docs
Clean up

[https://github.com/hasii2011/PyUt/issues/208]

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+
+Starting at version 6.0 you should go to wiki to track the updates
+https://github.com/hasii2011/PyUt/wiki
+========================================
+
 Updates at version 5.0:
 =========================
 Issue # Title
